Dec 16 2000 -	Releasing 2.7....

Dec 16 2000 -   Found another bug related to ALLOW_THREADS macros which are
		noops without threads, but that is actually wrong, because
		what they is needed wvwn without threads. Also, some days
		ago 2.6.4 was released.

Dec 13 2000 -	The initial documentation for the util module and for the
		publisher handler is done. Perhaps the tutorial should have
		a bit on the publisher handler.

Dec 12 2000 - 	publisher handler appears to be working pretty well. Now need
		to document it.

Dec 11 2000 -	It appears I found a big booboo with mispalced #ifdef
		WITH_THREADS... The "Dispatch returned nothing" should be
		gone now. This means 2.6.3 has major problems with multiple
		interpreters.

Dec  8 2000 -   connection.user now writable. More Doc improvements.

Dec  6 2000 -	The COPYRIGHT no longer has the advertizing clause.

Dec  4 2000 -	Initial (not proof-read) LaTeX source for documentation is 
		checked in.

Nov 26 2000 -	Dilligently migrating all the documentation to LaTeX using the
		Python standards. 

Nov 17 2000 -	I forgot to uncomment type initialization. type(req.headers_in)
		would segfault. Fixed. Continuing work on publisher.py module.

Nov 08 2000 -	read() and reqadline() now behave very much like the standard
		Python file object counterparts. Added James Gessling's VMS
		instructions.

Nov 07 2000 -	Initial version of req.readline(), also some fixes to 
		req.read() (both now raise appropriate errors). Both still need
		some work.

Nov 04 2000 -	Implemented _apache.parse_qs. Also, CGIStin had a read() bug.
		PythonHandlerModule is documented.

Oct 30 2000 -	Implemented PythonHandlerModule. Still need to document it.

Oct 29 2000 -	2.6.3 release. Mostly static install bug fixes.

Oct 22 2000 -   2.6.2 release

Oct 22 2000 -   "Fatal Python error: PyThreadState_Get: no current thread" upon
		exit is now fixed. Also, --with-python was improved to point
		to the right Makefile (Modules/Makefile) when scanning for LIBS.
