@@ -44,7 +44,7 @@
  *
  * requestobject.c 
  *
- * $Id: requestobject.c,v 1.5 2000/12/06 03:05:37 gtrubetskoy Exp $
+ * $Id: requestobject.c,v 1.6 2000/12/18 19:50:03 gtrubetskoy Exp $
  *
  */
 
@@ -1049,7 +1049,7 @@ static int request_setattr(requestobject *self, char *name, PyObject *value)
 }
 
 PyTypeObject MpRequest_Type = {
-    PyObject_HEAD_INIT(&PyType_Type)
+    PyObject_HEAD_INIT(NULL)
     0,
     "mp_request",
     sizeof(requestobject),
